update configs and instructions for debian 10